# PowerChecker

./: .gitmodules  LICENSE  README.md
Client_M5Stack/: .env.example  README.md  platformio.ini
Client_M5Stack/include/: button_mode.h  config.h  display.h  pixel_shift.h  wifi_connect.h
Client_M5Stack/scripts/: load_credentials.py
Client_M5Stack/src/: button.cpp  button.h  clock.cpp  clock.h  config.cpp  config.h  draw_power.cpp  draw_power.h  main.cpp  main.h  photo.cpp  photo.h  powerCheck.cpp  powerCheck.h
Client_M5Stack/src/button_mode/: button_mode.cpp  button_mode_int.h
Client_M5Stack/src/clock/: clock.cpp  clock_int.h
Client_M5Stack/src/ftp_server/: ftp_server.cpp  ftp_server_int.h
Client_M5Stack/src/photo_frame/: photo_frame.cpp  photo_frame_int.h
Client_M5Stack/src/power_checker/: draw_power.cpp  draw_power_int.h  powerCheck.cpp  powerCheck_int.h  power_photo.cpp  power_photo_int.h
Client_M5Stack/src/utils/: display.cpp  pixel_shift.cpp  wifi_connect.cpp
Client_M5Stack_rs/: .env.example  Cargo.toml  README.md  build.rs
Client_M5Stack_rs/.cargo/: config.toml
Client_M5Stack_rs/src/: main.rs  network.rs  power.rs  sdcard.rs  time_utils.rs
Client_M5Stack_rs/src/board/: m5stack_fire.rs  mod.rs
Client_M5Stack_rs/ui/: app.slint
Server_BP35C2/: .env.example  99-com.rules  Cargo.toml  README.md  install.sh  power_checker.service
Server_BP35C2/src/: bp35c2.rs  command.rs  config.rs  main.rs
Server_BP35C2/src/bp35c2/: ctrl.rs  device.rs
Server_BP35C2/src/switchbot/: meter.rs
