[package]
name = "power-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
hyper = "0.14.20"
regex = "1.6.0"
serde = "1.0.145"
serde_json = "1.0.86"
serialport = "4.2.0"
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
